force-app/main/default/objects/Journey_Template_Step__c/Journey_Template_Step__c.object-meta.xml
<CustomObject>
    <description>Workbook-defined journey template step records.</description>
    <label>Journey Template Step</label>
    <nameField>
        <displayFormat>STEP-{0000}</displayFormat>
        <label>Journey Template Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Template Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>