force-app/main/default/objects/Journey_Template_Step__c/fields/Anchor__c.field-meta.xml
<CustomField>
    <fullName>Anchor__c</fullName>
    <label>Anchor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consult date</fullName>
            </value>
            <value>
                <fullName>Journey start</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
    <required>true</required>
</CustomField>