force-app/main/default/objects/Journey_Template_Step__c/fields/Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Message_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Message Template</label>
    <referenceTo>Message_Template__c</referenceTo>
    <relationshipLabel>Message Template Records</relationshipLabel>
    <relationshipName>Message_Template</relationshipName>
    <type>Lookup</type>
</CustomField>