force-app/main/default/objects/Journey_Template_Step__c/fields/Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Offset_Days__c</fullName>
    <label>Offset Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <required>true</required>
</CustomField>