force-app/main/default/objects/Journey_Template_Step__c/fields/Patient_Facing__c.field-meta.xml
<CustomField>
    <fullName>Patient_Facing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Facing</label>
    <type>Checkbox</type>
</CustomField>