force-app/main/default/objects/Journey_Template_Step__c/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <label>Step Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Message</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Check-in</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>