force-app/main/default/objects/Journey_Template_Step__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adherence check</fullName>
            </value>
            <value>
                <fullName>Reading request</fullName>
            </value>
            <value>
                <fullName>Diet counselling</fullName>
            </value>
            <value>
                <fullName>Follow-up booking</fullName>
            </value>
            <value>
                <fullName>Doctor review</fullName>
            </value>
            <value>
                <fullName>LTFU call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>