force-app/main/default/objects/Journey_Template_Step__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <referenceTo>Journey_Template__c</referenceTo>
    <relationshipLabel>Template records</relationshipLabel>
    <relationshipName>JourneyTemplateStepTemplate</relationshipName>
    <type>MasterDetail</type>
</CustomField>